# strawberry-mypy-issue-repo-project

./: README.md  mypy.ini  pyproject.toml
strawberry_mypy_issue_repo_project/: models_not_working.py  models_working.py
