[tool.poetry]
name = "test-project2"
version = "0.1.0"
description = ""
authors = ["david"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.1"
strawberry-graphql = "^0.214.0"
mypy = "^1.7.0"
strawberry-mypy-issue-repo-dependency = {git = "https://github.com/davidnemec/strawberry-mypy-issue-repo-dependency.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
